# cybersecurity-project-7

./: .env  .env.example  .gitignore  COMPARISON.md  Dockerfile  README.md  SECURITY_ANALYSIS.md  TESTING.md  code.py  compose.yml  exploit_unvalidated_update.py  fixed-application.py  insecure-application.py  pyproject.toml  requirements.txt  run_all_tests.py  sbom.json  test_update_integration.py  test_update_integrity.py
demo_files/: attack_server.py  fake-update.txt  fake-update.txt.sha256  malicious-manifest.json  malicious-update.txt  malicious-update.txt.sha256  manifest.json
demo_files/command-injection/: important-file-with-integrity.txt  injection-commands.sh
publisher_tools/: gen_keys.py  publish_update.py
src/cra_demo_app/: cli.py  secure_update.py
test/: test_command_injection.py  test_login_security.py  test_update.py
